--- a/barbershop/#source/scss/style.scss
+++ b/barbershop/#source/scss/style.scss
@@ -18,6 +18,7 @@ body {
   font-size: 18px;
   line-height: 21px;
 }
+
 .visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
@@ -25,32 +26,39 @@ body {
   height: 1px;
   margin: -1px;
 }
-.current {
-  color: rgb(235, 214, 95);
-}
+
+// .current {
+//   color: rgb(235, 214, 95);
+// }
+
 .icon-button {
   background: url("../images/search.svg") no-repeat center;
   width: 10px;
   height: 10px;
 }
+
 .subscribe {
   background-color: #73a8cc;
   background: url("../images/background 1.jpg");
 }
+
 .filter {
   background-color: #73a8cc;
   background: url("../images/catalog-background 1.jpg");
   color: #ffffff;
 }
+
 .page-header nav {
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
 }
+
 nav a {
   color: black;
   text-decoration: none;
 }
+
 li {
   list-style-type: none;
 }
@@ -59,11 +67,13 @@ ul {
   margin-left: 0;
   padding-left: 0;
 }
+
 .big__header-text {
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
 }
+
 .header-text {
   font-size: 24px;
   line-height: 28px;
@@ -71,30 +81,35 @@ ul {
   text-decoration: none;
   font-weight: 700;
 }
+
 .five__pr {
   font-size: 22px;
   line-height: 36px;
 }
+
 .background-blue {
   background-color: #73a8cc;
   color: white;
   padding: 15px;
 }
+
 .background-lightblue {
   background-color: #bfd7e7;
   padding: 15px;
 }
+
 .background-lightblue-aye {
   background-color: #9eb8c9;
   padding: 15px;
 }
+
 .interesting__subtitle {
   font-size: 22px;
   line-height: 26px;
 }
+
 .search__gost {
   background-color: #756257;
-  // display: inline-block;
   width: 250px;
   height: 25px;
   text-decoration: none;
@@ -103,6 +118,7 @@ ul {
   font-weight: 700;
   margin: 0 auto;
 }
+
 .subscribe-btn {
   background-color: #83b3d3;
   color: #ffffff;
@@ -115,57 +131,69 @@ ul {
   line-height: 40px;
   font-size: 40px;
 }
+
 .sedona-gosts {
   color: #ffffff;
   font-size: 60px;
   line-height: 78px;
 }
+
 .filter_mini-title {
   font-size: 20px;
   font-weight: 700;
 }
+
 .use-btn {
   background-color: #83b3d3;
-
   color: #ffffff;
 }
+
 .delete-btn {
   background: transparent;
   border: none;
   color: #ffffff;
 }
+
 .transparent {
   background-color: transparent;
   color: #ffffff;
 }
+
 .otdo {
   color: #b6b6b6;
 }
+
 .block {
   width: 200px;
   height: 200px;
   text-align: center;
   background-color: #73a8cc;
 }
+
 .block__all {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px 20px;
 }
+
 .container {
   width: 1200px;
 }
+
 nav {
   display: flex;
   margin: 0 auto;
 }
+
 .page-header {
   margin: 0 auto;
 }
+
 .nav__list {
   display: flex;
   margin-right: auto;
 }
+
 .nav__user {
   display: flex;
   flex-wrap: nowrap;
@@ -174,19 +202,21 @@ nav {
   position: relative;
   right: 20px;
 }
+
 .nav__user-item {
   margin-right: 10px;
-  &:last-child {
-    margin-right: 0px;
-  }
+}
+.nav__user-item:last-child {
+  margin-right: 0px;
 }
 
 .nav__list-item {
   margin-right: 34px;
-  &:last-child {
-    margin-right: 0px;
-  }
 }
+.nav__list-item:last-child {
+  margin-right: 0px;
+}
+
 .btn-want {
   display: inline-block;
   background-color: #756257;
@@ -196,96 +226,99 @@ nav {
   width: 100px;
   height: 30px;
 }
+
 html {
   height: 100%;
 }
+
 body {
   margin: 0;
   min-height: 100%;
   display: flex;
   flex-direction: column;
 }
+
 .main-container {
   flex-grow: 1;
 }
+
 .view {
   margin: 0 auto;
 }
+
 .main__content-page {
   display: flex;
   flex-direction: column;
 }
+
 .view__prikl {
   display: flex;
   flex-direction: column;
   align-items: center;
   background: black url("/images/first-background.jpg") no-repeat;
   background-size: cover;
-  & img:nth-child(1) {
-    margin-top: 52px;
-  }
-  & img:nth-child(3) {
-    margin-bottom: 83px;
-  }
-  & img:nth-child(2) {
-    margin-bottom: 54px;
-    margin-top: 12px;
-  }
 }
+.view__prikl img:nth-child(1) {
+  margin-top: 52px;
+}
+.view__prikl img:nth-child(3) {
+  margin-bottom: 83px;
+}
+.view__prikl img:nth-child(2) {
+  margin-bottom: 54px;
+  margin-top: 12px;
+}
+
 .big__header-text {
   text-align: center;
 }
+
 .five__pr {
   text-align: center;
 }
+
 .background-blue {
   display: flex;
   margin: 0 auto;
   flex-direction: column;
-  // color: white;
   margin-bottom: 15px;
-  // & b {
-  //   color: white;
-  // }
   align-items: center;
   padding: 0;
   width: 1200px;
-  & img {
-    margin-top: auto;
-  }
 }
+.background-blue img {
+  margin-top: auto;
+}
+
 .adventage-list-item {
   display: flex;
   flex-direction: column;
 }
+
 .background-lightblue {
   margin: 0 auto;
   margin-bottom: 15px;
   padding: 0;
-  // color: white;
-  // & b {
-  //   color: white;
-  // }
   width: 1200px;
 }
+
 .background-lightblue-aye {
   margin: 0 auto;
   margin-bottom: 15px;
   width: 1200px;
-  // color: white;
-  // & b {
-  //   color: white;
-  // }
   padding: 0;
 }
+
 .easy-block {
   margin: 0 auto;
   margin-bottom: 15px;
   width: 1200px;
 }
+
 .interesting__subtitle {
   text-align: center;
 }
+
 .subscribe {
   margin: 0 auto;
   width: 1200px;
@@ -294,23 +327,28 @@ body {
   align-items: center;
   color: #fff;
 }
+
 .page-footer {
   margin: 0 auto;
   width: 1200px;
   display: flex;
+  align-items: center;
   justify-content: space-around;
 }
+
 .main__content-catalog {
   display: flex;
   flex-direction: column;
-  // flex-grow: 1;
 }
+
 .filter {
   margin: 0 auto;
 }
+
 .search-gost {
   text-align: center;
 }
+
 .result-gost {
   display: flex;
   width: 1200px;
@@ -318,6 +356,7 @@ body {
   justify-content: flex-start;
   margin: 0 auto;
 }
+
 .izbrannoe {
   color: white;
   background-color: #73a8cc;
@@ -328,6 +367,7 @@ body {
   border-radius: 5px;
   align-self: flex-start;
 }
+
 .podrobnee {
   color: white;
   border: none;
@@ -337,15 +377,18 @@ body {
   align-self: flex-start;
   background-color: #756257;
 }
+
 .page-list {
   display: flex;
-  & a {
-    margin-right: 8px;
-  }
 }
+.page-list a {
+  margin-right: 8px;
+}
+
 .rassilka {
   margin: 0 auto;
 }
+
 ul,
 ol {
   margin: 0;
@@ -357,22 +400,25 @@ ol {
   width: 500px;
   flex-wrap: wrap;
 }
+
 .but-load {
   display: flex;
   justify-content: flex-start;
 }
+
 .btn-loading {
   background-color: #73a8cc;
   color: white;
   font-size: 24px;
   border: 1px solid rgb(68, 67, 67);
-  // justify-content: flex-start;
 }
+
 .page-list {
   display: flex;
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
 .page-number {
   display: flex;
   background-color: #73a8cc;
@@ -385,18 +431,502 @@ ol {
   font-size: 20px;
   text-decoration: none;
 }
+
 .podrobnee {
   margin-bottom: 10px;
 }
+
 a {
   text-decoration: none;
 }
+
 a .header-text {
   margin-bottom: 15px;
 }
 .header-text11 {
   color: white;
   font-size: 24px;
-  line-height: 28;
+  line-height: 28px;
   font-weight: 700;
+}
+.adventage-list-item {
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+}
+.true-city-img {
+  grid-column: 2/3;
+}
+.adventage-list {
+  width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+  margin-bottom: 91px;
+  font-size: 18px;
+  line-height: 21px;
+}
+.true-city {
+  background-color: #73a8cc;
+  padding: 97px 90px 87px 97px;
+  color: white;
+  width: 400px;
+  box-sizing: border-box;
+}
+.adventage-header-white {
+  font-size: 24px;
+  line-height: 28px;
+  position: relative;
+  font-weight: 700;
+  color: white;
+  padding-bottom: 51px;
+  margin-bottom: 30px;
+}
+.white-1::after {
+  content: "— №1 —";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.white-2::after {
+  content: "— №2 —";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.true-city-img {
+  grid-column: 2/-1;
+}
+.true-city-img img {
+  display: block;
+}
+p {
+  margin: 0;
+}
+.home {
+  background-color: rgba(131, 179, 211, 0.12);
+  color: black;
+  width: 400px;
+  padding: 89px 75px 79px 75px;
+  box-sizing: border-box;
+  text-align: center;
+  height: 384px;
+  & img {
+    margin-bottom: 23px;
+  }
+}
+.adventage-header-black {
+  color: black;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.food {
+  background-color: #ffffff;
+  padding: 89px 75px 79px 75px;
+  width: 400px;
+  box-sizing: border-box;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 400;
+  & img {
+    margin-bottom: 23px;
+  }
+}
+.suvenirs {
+  padding: 89px 75px 79px 75px;
+  width: 400px;
+  box-sizing: border-box;
+  background-color: rgba(131, 179, 211, 0.12);
+  & img {
+    margin-bottom: 23px;
+  }
+}
+.number-adventage {
+  margin-bottom: 30px;
+}
+.diablo {
+  background-color: #73a8cc;
+  padding: 98px 90px 87px 90px;
+  color: white;
+}
+.mountains-img {
+  grid-column: 1/3;
+}
+.mountains-img img {
+  display: block;
+}
+.five__pr {
+  margin-bottom: 80px;
+}
+.s {
+  background-color: rgba(131, 179, 211, 0.12);
+  padding: 98px 75px 108px 75px;
+  /* width: 400px; */
+  /* box-sizing: border-box; */
+}
+.road {
+  background-color: rgba(131, 179, 211, 0.2);
+  padding: 98px 75px 108px 75px;
+}
+.touristes {
+  background-color: rgba(131, 179, 211, 0.12);
+  padding: 98px 75px 108px 75px;
+}
+.interesting {
+  margin-bottom: 29px;
+}
+.interesting__subtitle {
+  margin-bottom: 56px;
+}
+.search__gost {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 575px;
+  height: 60px;
+  border-radius: 10px;
+  margin-bottom: 93px;
+}
+.search-gost11 {
+  display: flex;
+  flex-direction: column;
+}
+.cool-info {
+  margin-bottom: 46px;
+}
+.email-subscribe {
+  display: grid;
+  width: 800px;
+  height: 60px;
+  grid-template-columns: 1fr min-content;
+  margin-bottom: 94px;
+}
+.subscribe-btn {
+  border: none;
+  background-color: #73a8cc;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 700;
+}
+.email-form {
+  box-sizing: border-box;
+  border: none;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background-color: #f2f2f2;
+}
+.subscribe {
+  margin-bottom: 40px;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+}
+.form-grid {
+  display: grid;
+  width: 1200px;
+  grid-template-columns: min-content 170px 1fr 1fr;
+}
+.infrastructure {
+  grid-column: 1/2;
+  margin-right: 20px;
+}
+.type-home {
+  grid-column: 2/3;
+  margin-right: 300px;
+}
+.price {
+  grid-column: 3/4;
+  justify-self: end;
+}
+.catalog-button {
+  grid-column: 4/5;
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+}
+.delete-btn {
+  border: 2px solid black;
+}
+.filter .container {
+  padding: 35px 72px 86px 72px;
+  box-sizing: border-box;
+}
+label,
+input,
+fieldset {
+  margin: 0;
+  padding: 0;
+}
+.hotel-card {
+  display: flex;
+  flex-direction: column;
+  /* width: 300px; */
+}
+.hotel-card img {
+  min-width: 100%;
+  height: auto;
+  margin-bottom: 16px;
+}
+.hotel-card a {
+  margin-bottom: 16px;
+}
+.hotel-card-price {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+.hotel-card-btn {
+  display: flex;
+  justify-content: space-between;
+}
+.hotel-card-list {
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  gap: 30px 40px;
+  margin-right: 92px;
+  margin-left: 92px;
+  width: 980px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+.found-gost-and-cost {
+  width: 1200px;
+  margin: 0 auto;
+  align-items: center;
+  display: flex;
+  margin-top: 44px;
+  margin-bottom: 76px;
+}
+.search-gost {
+  margin-left: 71px;
+  margin-right: 192px;
+}
+.low-hight-cost {
+  border: 2px solid #e6e6e6;
+  width: 287px;
+  height: 50px;
+  box-sizing: border-box;
+}
+.result-gost {
+  margin-bottom: 77px;
+}
+
+.nav-current::after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  right: 1;
+  left: 1;
+  bottom: 0;
+  background-color: #756257;
+}
+.nav__list-item {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.current-page {
+  position: relative;
+}
+.izbrannoe {
+  box-shadow: inset 0px -20px 30px -30px rgb(92, 91, 91);
+}
+.current-page::after {
+  content: "";
+  position: absolute;
+  right: 0px;
+  left: 0px;
+  height: 2px;
+  bottom: 0;
+  background-color: #756257;
+}
+.but-load,
+.page-list,
+.gost-on-page {
+  width: 980px;
+  margin: 0 auto;
+}
+.btn-loading {
+  box-shadow: inset 0 -20px 40px -30px rgb(92, 91, 91);
+}
+.but-load {
+  margin-bottom: 60px;
+  position: relative;
+  padding-bottom: 30px;
+  padding-top: 30px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 1px;
+    background-color: #e6e6e6;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 1px;
+    background-color: #e6e6e6;
+  }
+}
+.btn-loading {
+  border: none;
+  width: 620px;
+  height: 60px;
+  border-radius: 4px;
+  margin: 0 auto;
+}
+.hotel-card-list {
+  margin-bottom: 64px;
+}
+.page-list-and-form {
+  display: flex;
+  width: 980px;
+  margin: 0 auto;
+  align-items: center;
+}
+.page-list {
+  margin-right: auto;
+}
+.page-number {
+  border-radius: 4px;
+  box-shadow: inset 0 -20px 40px -30px rgb(92, 91, 91);
+}
+.gost-on-page {
+  width: 100%;
+  box-sizing: border-box;
+  text-align: end;
+}
+.label-gost {
+  margin-right: 51px;
+}
+.select-gost {
+  width: 160px;
+  height: 48px;
+  border: 2px solid #e6e6e6;
+  border-radius: 4px;
+}
+.current-number {
+  background-color: #f2f2f2;
+  color: black;
+}
+.podpiska {
+  margin-bottom: 46px;
+  text-align: center;
+}
+.cool-info-only {
+  margin-bottom: 46px;
+  text-align: center;
+}
+.email-and-btn {
+  width: 800px;
+  margin: 0 auto;
+  display: grid;
+  height: 60px;
+  grid-template-columns: 600px 200px;
+  grid-template-rows: 60px;
+}
+.page-footer {
+  margin-bottom: 40px;
+}
+.email-input {
+  box-sizing: border-box;
+  width: 600px;
+  background: #f2f2f2;
+  border: none;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.subscribe {
+  margin-bottom: 40px;
+}
+input {
+  text-indent: 22px;
+}
+.adventage-header-white .podpiska-btn {
+  height: 60px;
+  // align-self: stretch;
+  background-color: #83b3d3;
+  color: white;
+  border: none;
+  font-size: 20px;
+  line-height: 26px;
+  text-transform: uppercase;
+  border-radius: 0px 10px 10px 0px;
+}
+.social {
+  align-self: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 30px;
+  row-gap: 20px;
+  align-items: center;
+}
+.email-and-btn {
+  margin-bottom: 140px;
+}
+.form-catalog {
+  background-color: #f2f2f2;
+}
+.email-form:hover {
+  background: #e6e6e6;
+}
+.infrastructure {
+  display: flex;
+  flex-direction: column;
+}
+.infra-input {
+  margin-right: 23px;
+}
+.type-home {
+  display: flex;
+  flex-direction: column;
+  width: 150px;
+}
+.home-input {
+  margin-right: 24px;
+}
+.nav__list-item a {
+  transition: all 0.2s ease;
+}
+.nav__list-item a:hover {
+  color: #756257;
+}
+.btn-want,
+.search__gost {
+  transition: all 0.2s ease;
+}
+.btn-want:hover,
+.search__gost:hover {
+  background-color: #615048;
+  cursor: pointer;
+}
+
+.btn-want:active,
+.search__gost:active {
+  background-color: #615048;
+  color: rgba(255, 255, 255, 0.295);
+}
+.btn-want:focus,
+.search__gost:focus {
+  background: #615048;
+  border: 3px solid #83b3d3;
+}
+button:focus,
+input:focus {
+  border: none;
+  border: 3px solid #83b3d3;
 }
