--- a/barbershop/css/style.css
+++ b/barbershop/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "PT-sans";
   src: url("/fonts/ptsans-400.woff2");
@@ -25,10 +26,6 @@ body {
   width: 1px;
   height: 1px;
   margin: -1px;
-}
-
-.current {
-  color: rgb(235, 214, 95);
 }
 
 .icon-button {
@@ -206,6 +203,7 @@ nav {
 .nav__user-item {
   margin-right: 10px;
 }
+
 .nav__user-item:last-child {
   margin-right: 0px;
 }
@@ -213,6 +211,7 @@ nav {
 .nav__list-item {
   margin-right: 34px;
 }
+
 .nav__list-item:last-child {
   margin-right: 0px;
 }
@@ -258,12 +257,15 @@ body {
   background: black url("/images/first-background.jpg") no-repeat;
   background-size: cover;
 }
+
 .view__prikl img:nth-child(1) {
   margin-top: 52px;
 }
+
 .view__prikl img:nth-child(3) {
   margin-bottom: 83px;
 }
+
 .view__prikl img:nth-child(2) {
   margin-bottom: 54px;
   margin-top: 12px;
@@ -286,6 +288,7 @@ body {
   padding: 0;
   width: 1200px;
 }
+
 .background-blue img {
   margin-top: auto;
 }
@@ -332,6 +335,7 @@ body {
   margin: 0 auto;
   width: 1200px;
   display: flex;
+  align-items: center;
   justify-content: space-around;
 }
 
@@ -380,6 +384,7 @@ body {
 .page-list {
   display: flex;
 }
+
 .page-list a {
   margin-right: 8px;
 }
@@ -442,19 +447,23 @@ a {
 a .header-text {
   margin-bottom: 15px;
 }
+
 .header-text11 {
   color: white;
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
 }
+
 .adventage-list-item {
   display: grid;
   grid-template-columns: repeat(3, 400px);
 }
+
 .true-city-img {
   grid-column: 2/3;
 }
+
 .adventage-list {
   width: 1200px;
   margin: 0 auto;
@@ -465,37 +474,66 @@ a .header-text {
   font-size: 18px;
   line-height: 21px;
 }
+
 .true-city {
   background-color: #73a8cc;
-  padding: 97px 75px 87px 97px;
+  padding: 97px 90px 87px 97px;
   color: white;
   width: 400px;
   box-sizing: border-box;
 }
+
 .adventage-header-white {
   font-size: 24px;
   line-height: 28px;
+  position: relative;
   font-weight: 700;
   color: white;
+  padding-bottom: 51px;
   margin-bottom: 30px;
 }
+
+.white-1::after {
+  content: "— №1 —";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.white-2::after {
+  content: "— №2 —";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .true-city-img {
   grid-column: 2/-1;
 }
+
 .true-city-img img {
   display: block;
 }
+
 p {
   margin: 0;
 }
+
 .home {
   background-color: rgba(131, 179, 211, 0.12);
   color: black;
   width: 400px;
-  padding: 134px 75px 79px 75px;
+  padding: 89px 75px 79px 75px;
   box-sizing: border-box;
   text-align: center;
+  height: 384px;
 }
+.home img {
+  margin-bottom: 23px;
+}
+
 .adventage-header-black {
   color: black;
   font-size: 24px;
@@ -503,55 +541,77 @@ p {
   font-weight: 700;
   margin-bottom: 20px;
 }
+
 .food {
   background-color: #ffffff;
-  padding: 134px 75px 79px 75px;
+  padding: 89px 75px 79px 75px;
   width: 400px;
   box-sizing: border-box;
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
 }
+.food img {
+  margin-bottom: 23px;
+}
+
 .suvenirs {
-  padding: 134px 75px 79px 75px;
+  padding: 89px 75px 79px 75px;
   width: 400px;
   box-sizing: border-box;
   background-color: rgba(131, 179, 211, 0.12);
 }
+.suvenirs img {
+  margin-bottom: 23px;
+}
+
+.number-adventage {
+  margin-bottom: 30px;
+}
+
 .diablo {
   background-color: #73a8cc;
   padding: 98px 90px 87px 90px;
   color: white;
 }
+
 .mountains-img {
   grid-column: 1/3;
 }
+
 .mountains-img img {
   display: block;
 }
+
 .five__pr {
   margin-bottom: 80px;
 }
+
 .s {
   background-color: rgba(131, 179, 211, 0.12);
   padding: 98px 75px 108px 75px;
   /* width: 400px; */
   /* box-sizing: border-box; */
 }
+
 .road {
   background-color: rgba(131, 179, 211, 0.2);
   padding: 98px 75px 108px 75px;
 }
+
 .touristes {
   background-color: rgba(131, 179, 211, 0.12);
   padding: 98px 75px 108px 75px;
 }
+
 .interesting {
   margin-bottom: 29px;
 }
+
 .interesting__subtitle {
   margin-bottom: 56px;
 }
+
 .search__gost {
   display: flex;
   justify-content: center;
@@ -561,20 +621,25 @@ p {
   border-radius: 10px;
   margin-bottom: 93px;
 }
+
 .search-gost11 {
   display: flex;
   flex-direction: column;
 }
+
 .cool-info {
   margin-bottom: 46px;
 }
+
 .email-subscribe {
   display: grid;
   width: 800px;
   height: 60px;
+  grid-template-columns: 1fr -webkit-min-content;
   grid-template-columns: 1fr min-content;
   margin-bottom: 94px;
 }
+
 .subscribe-btn {
   border: none;
   background-color: #73a8cc;
@@ -584,77 +649,96 @@ p {
   line-height: 26px;
   font-weight: 700;
 }
+
 .email-form {
   box-sizing: border-box;
   border: none;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  background-color: #f2f2f2;
 }
+
 .subscribe {
   margin-bottom: 40px;
 }
+
 .container {
   display: flex;
   flex-direction: column;
 }
+
 .form-grid {
   display: grid;
   width: 1200px;
-  grid-template-columns: min-content min-content 1fr 1fr;
+  grid-template-columns: -webkit-min-content 170px 1fr 1fr;
+  grid-template-columns: min-content 170px 1fr 1fr;
 }
+
 .infrastructure {
   grid-column: 1/2;
   margin-right: 20px;
 }
+
 .type-home {
   grid-column: 2/3;
   margin-right: 300px;
 }
+
 .price {
   grid-column: 3/4;
   justify-self: end;
 }
+
 .catalog-button {
   grid-column: 4/5;
   justify-self: center;
   display: flex;
   flex-direction: column;
 }
+
 .delete-btn {
   border: 2px solid black;
 }
+
 .filter .container {
   padding: 35px 72px 86px 72px;
   box-sizing: border-box;
 }
+
 label,
 input,
 fieldset {
   margin: 0;
   padding: 0;
 }
+
 .hotel-card {
   display: flex;
   flex-direction: column;
   /* width: 300px; */
 }
+
 .hotel-card img {
   min-width: 100%;
   height: auto;
   margin-bottom: 16px;
 }
+
 .hotel-card a {
   margin-bottom: 16px;
 }
+
 .hotel-card-price {
   display: flex;
   justify-content: space-between;
   margin-bottom: 16px;
 }
+
 .hotel-card-btn {
   display: flex;
   justify-content: space-between;
 }
+
 .hotel-card-list {
   display: grid;
   grid-template-columns: 300px 300px 300px;
@@ -665,6 +749,7 @@ fieldset {
   box-sizing: border-box;
   margin: 0 auto;
 }
+
 .found-gost-and-cost {
   width: 1200px;
   margin: 0 auto;
@@ -673,19 +758,269 @@ fieldset {
   margin-top: 44px;
   margin-bottom: 76px;
 }
+
 .search-gost {
   margin-left: 71px;
   margin-right: 192px;
 }
+
 .low-hight-cost {
   border: 2px solid #e6e6e6;
   width: 287px;
   height: 50px;
   box-sizing: border-box;
 }
+
 .result-gost {
   margin-bottom: 77px;
 }
-main {
-  margin-bottom: 181px;
+
+.nav-current::after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  right: 1;
+  left: 1;
+  bottom: 0;
+  background-color: #756257;
+}
+
+.nav__list-item {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.current-page {
+  position: relative;
+}
+
+.izbrannoe {
+  box-shadow: inset 0px -20px 30px -30px rgb(92, 91, 91);
+}
+
+.current-page::after {
+  content: "";
+  position: absolute;
+  right: 0px;
+  left: 0px;
+  height: 2px;
+  bottom: 0;
+  background-color: #756257;
+}
+
+.but-load,
+.page-list,
+.gost-on-page {
+  width: 980px;
+  margin: 0 auto;
+}
+
+.btn-loading {
+  box-shadow: inset 0 -20px 40px -30px rgb(92, 91, 91);
+}
+
+.but-load {
+  margin-bottom: 60px;
+  position: relative;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+.but-load::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 1px;
+  background-color: #e6e6e6;
+}
+.but-load::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 1px;
+  background-color: #e6e6e6;
+}
+
+.btn-loading {
+  border: none;
+  width: 620px;
+  height: 60px;
+  border-radius: 4px;
+  margin: 0 auto;
+}
+
+.hotel-card-list {
+  margin-bottom: 64px;
+}
+
+.page-list-and-form {
+  display: flex;
+  width: 980px;
+  margin: 0 auto;
+  align-items: center;
+}
+
+.page-list {
+  margin-right: auto;
+}
+
+.page-number {
+  border-radius: 4px;
+  box-shadow: inset 0 -20px 40px -30px rgb(92, 91, 91);
+}
+
+.gost-on-page {
+  width: 100%;
+  box-sizing: border-box;
+  text-align: end;
+}
+
+.label-gost {
+  margin-right: 51px;
+}
+
+.select-gost {
+  width: 160px;
+  height: 48px;
+  border: 2px solid #e6e6e6;
+  border-radius: 4px;
+}
+
+.current-number {
+  background-color: #f2f2f2;
+  color: black;
+}
+
+.podpiska {
+  margin-bottom: 46px;
+  text-align: center;
+}
+
+.cool-info-only {
+  margin-bottom: 46px;
+  text-align: center;
+}
+
+.email-and-btn {
+  width: 800px;
+  margin: 0 auto;
+  display: grid;
+  height: 60px;
+  grid-template-columns: 600px 200px;
+  grid-template-rows: 60px;
+}
+
+.page-footer {
+  margin-bottom: 40px;
+}
+
+.email-input {
+  box-sizing: border-box;
+  width: 600px;
+  background: #f2f2f2;
+  border: none;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.subscribe {
+  margin-bottom: 40px;
+}
+
+input {
+  text-indent: 22px;
+}
+
+.adventage-header-white .podpiska-btn {
+  height: 60px;
+  background-color: #83b3d3;
+  color: white;
+  border: none;
+  font-size: 20px;
+  line-height: 26px;
+  text-transform: uppercase;
+  border-radius: 0px 10px 10px 0px;
+}
+
+.social {
+  align-self: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  row-gap: 20px;
+  align-items: center;
+}
+
+.email-and-btn {
+  margin-bottom: 140px;
+}
+
+.form-catalog {
+  background-color: #f2f2f2;
+}
+
+.email-form:hover {
+  background: #e6e6e6;
+}
+
+.infrastructure {
+  display: flex;
+  flex-direction: column;
+}
+
+.infra-input {
+  margin-right: 23px;
+}
+
+.type-home {
+  display: flex;
+  flex-direction: column;
+  width: 150px;
+}
+
+.home-input {
+  margin-right: 24px;
+}
+
+.nav__list-item a {
+  transition: all 0.2s ease;
+}
+
+.nav__list-item a:hover {
+  color: #756257;
+}
+
+.btn-want,
+.search__gost {
+  transition: all 0.2s ease;
+}
+
+.btn-want:hover,
+.search__gost:hover {
+  background-color: #615048;
+  cursor: pointer;
+}
+
+.btn-want:active,
+.search__gost:active {
+  background-color: #615048;
+  color: rgba(255, 255, 255, 0.295);
+}
+
+.btn-want:focus,
+.search__gost:focus {
+  background: #615048;
+  border: 3px solid #83b3d3;
+}
+
+button:focus,
+input:focus {
+  border: none;
+  border: 3px solid #83b3d3;
 }
